assets/styles/main.css
/* ... */
.u-text-justify {
  text-align: justify !important;
}

.u-text-nowrap {
  white-space: nowrap !important;
}

.u-text-capitalize {
  text-transform: capitalize !important;
}

.u-text-lowercase {
  text-transform: lowercase !important;
}

.u-text-uppercase {
  text-transform: uppercase !important;
}

.u-text-center {
  text-align: center !important;
}

.u-text-left {
  text-align: left !important;
}

.u-text-right {
  text-align: right !important;
}

.u-text-hide {
  overflow: hidden;
  text-indent: 150%;
  white-space: nowrap;
}


@media screen and (max-width: 412px) {

  .c-section.-margin-bottom-half {
    margin-bottom: 0px;
    padding-bottom: 0px;
  }

  .c-header__wrapper {
    display: flex;
    justify-content: center;
  }

  #ads-logo svg {
    width: 300px;
  }

  .illustration-1 {
    margin: 0 auto;
    width: 300px;
    height: 290px;
    text-align: center;
  }

  .illustration-2 {
    width: 320px;
    height: 320px;
    margin: 0 auto;
  }

  .os-icons {
    width: 300px;
    height: 34px;
    margin: 0 auto;
  }

  .header-section {
    width: 90%;
    text-align: center;
    margin: 0 auto;
    padding: 0px;
  }

  .header-section h3 {
    font-size: 32px;
    text-align: center;
    margin: 0 auto;
  }

  #welcome-para, #mp-section {
    display: flex;
    width: 80%;
  }

  #welcome-para p, #f-header p {
    font-size: 14px;
  }

  #f-header h2, #form-header h2 {
    font-size: 32px;
  }

  #mp-section {
    padding: 0px;
    float: none;
  }

  #mp-ads .l-row {
    margin-left: 0px;
  }

  .para-section, #welcome-para {
    text-align: center;
    /* display: flex; */
    justify-content: center;
    flex-direction: column;
    align-items: center;
    /* width: 80%; */
    margin: 0 auto;
  }

  .header-section p, .header-section ul {
    font-size: 14px;
    margin-left: 0px;
  }

  #apps-home {
    margin-left: 15px;
  }

  #apps-home .l-row {
    margin: 0px;
  }

  #apps-home, #apps-home h3, #apps-ads, #apps-ads h3, #apps-home a,
  #apps-ads a, #apps-para, #apps-para-ads {
    text-align: left;
  }

  #apps-para-ads {
    margin: 0px;
    justify-content: left;
  }

  #apps-para-ads p {
    width: 300px;
    margin-right: 0px;
  }

  #imp-para, #first-para {
    font-size: 18px;
  }

  #mp-para ul li, #mp-ads ul li {
    list-style: none;
    margin-bottom: 28px;
  }

  .list-title {
    font-size: 18px;
  }

  #form-home, #f-home {
    margin: 0 auto;
    width: 280px;
  }

  #f-home button, #form-home button, #mp-home a, #ppl-home a {
    margin: 0 auto;
    justify-content: center;
  }

  #sl-home, #sl-ads {
    margin-left: 15px;
  }

  #sl-home, #sl-home h3, #sl-ads, #sl-ads h3 {
    text-align: left;
  }

  #cs-home img {
    width: 80px;
  }

  #cs-home p {
    width: 100px;
    height: 100px;
    margin: 0px;
  }

  #cs-home .l-row {
    width: 280px;
  }

  #case-studies-three .u-d-lg-flex {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
  }

  #case-studies-three .u-d-lg-flex div {
    margin: 0 auto;
    grid-template-rows: 1fr 1fr;
  }

  .c-section.-padding-bottom-double {
    padding-bottom: 0px;
  }

  .h1,
  h1 {
    font-size: 30px;
  }

  .h2,
  h2 {
    font-size: 24px;
  }

  .h3,
  h3 {
    font-size: 20px;
  }

  .h4,
  h4 {
    font-size: 16px;
  }

  .h5,
  h5 {
    font-size: 16px;
  }

  .h6,
  h6 {
    font-size: 14px;
  }

  .c-jumbotron {
    margin-bottom: 40px;
    height: 560px;
  }

  .layout-who-we-are .c-jumbotron {
    margin: 0px;
  }

  .c-header__logo svg {
    width: 180px;
  }

  .c-gate .c-gate__button .c-gate__button-heading {
    font-size: 72px;
  }

  html.no-js .c-jumbotron .c-jumbotron__heading .c-jumbotron__heading-text {
    font-size: 60px;
  }

  .c-nav ul li a {
    font-size: 40px;
  }

  .c-nav ul ul li a {
    font-size: 30px;
  }

  .c-page-title .c-page-title__heading .c-page-title__heading-text {
    font-size: 60px;
  }

  .c-testimonial p {
    font-size: 22px;
  }

  .c-gate .c-gate__button .c-gate__button-heading {
    font-size: 72px;
  }

  html.no-js .c-jumbotron .c-jumbotron__heading .c-jumbotron__heading-text {
    font-size: 60px;
  }

  .c-nav ul li a {
    font-size: 40px;
  }

  .c-nav ul ul li a {
    font-size: 30px;
  }

  .c-page-title .c-page-title__heading .c-page-title__heading-text {
    font-size: 60px;
  }

  .c-testimonial p {
    font-size: 22px;
  }

  .u-font-0 {
    font-size: 12px;
  }

  .u-font-1 {
    font-size: 12px;
  }

  .u-font-2 {
    font-size: 14px;
  }

  .u-font-3 {
    font-size: 16px;
  }

  .u-font-4 {
    font-size: 16px;
  }

  .u-font-5 {
    font-size: 20px;
  }

  .u-font-6 {
    font-size: 24px;
  }

  .u-font-7 {
    font-size: 30px;
  }

  .u-font-8 {
    font-size: 40px;
  }

  .u-font-9 {
    font-size: 48px;
  }

  .u-font-10 {
    font-size: 32px;
  }

  .u-font-11 {
    font-size: 40px;
  }

  .u-font-0 {
    font-size: 12px;
  }

  .u-font-1 {
    font-size: 12px;
  }

  .u-font-2 {
    font-size: 14px;
  }

  .u-font-3 {
    font-size: 16px;
  }

  .u-font-4 {
    font-size: 16px;
  }

  .u-font-5 {
    font-size: 20px;
  }

  .u-font-6 {
    font-size: 24px;
  }

  .u-font-7 {
    font-size: 30px;
  }

  .u-font-8 {
    font-size: 40px;
  }

  .u-font-9 {
    font-size: 48px;
  }

  .u-font-10 {
    font-size: 68px;
  }

  .u-font-11 {
    font-size: 40px;
  }
}
/* ... */

